[gd_scene load_steps=11 format=2]

[ext_resource path="res://Character/MainPlayer.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Character/PlayerFSM.gd" type="Script" id=2]
[ext_resource path="res://Character/HP_Bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/SFX/melee sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Character/MainPlayer.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/SFX/knifesharpener1.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/SFX/RunLoop.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/SFX/jump.wav" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.25041, 8.49959 )

[sub_resource type="RectangleShape2D" id=2]

[node name="MainPlayer" type="KinematicBody2D"]
collision_mask = 16
script = ExtResource( 5 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ShurikenAudio" type="AudioStreamPlayer" parent="PlayerFSM"]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="RunAudio" type="AudioStreamPlayer" parent="PlayerFSM"]
stream = ExtResource( 7 )
volume_db = -20.0

[node name="MeleeAudio" type="AudioStreamPlayer" parent="PlayerFSM"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="JumpAudio" type="AudioStreamPlayer" parent="PlayerFSM"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -3 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Shuriken" type="Position2D" parent="."]
position = Vector2( 4.06358, -10.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.98994, -0.280609 )
frames = ExtResource( 1 )
animation = "Jump"
frame = 14
playing = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="invinc_timer" type="Timer" parent="."]
one_shot = true

[node name="Regen_Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Control" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.4541
margin_top = -9.79969
margin_right = 13.4541
margin_bottom = -9.79969

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[node name="wallRays" type="Node2D" parent="."]

[node name="right" type="Node2D" parent="wallRays"]
position = Vector2( -37.0805, 5.5306 )
rotation = 6.28319

[node name="RayCast2D4" type="RayCast2D" parent="wallRays/right"]
position = Vector2( 32.1552, -11.3623 )
rotation = -1.5708
scale = Vector2( 0.519999, 0.399999 )
enabled = true
exclude_parent = false
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="wallRays/right"]
position = Vector2( 32.056, 1.9329 )
rotation = -1.5708
scale = Vector2( 0.521332, 0.400002 )
enabled = true
exclude_parent = false
collision_mask = 2

[node name="left" type="Node2D" parent="wallRays"]
position = Vector2( 42.4891, -4.13105 )
rotation = 3.14159

[node name="RayCast2D4" type="RayCast2D" parent="wallRays/left"]
position = Vector2( 32.1552, -11.3623 )
rotation = -1.5708
scale = Vector2( 0.519999, 0.399999 )
enabled = true
exclude_parent = false
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="wallRays/left"]
position = Vector2( 32.056, 1.9329 )
rotation = -1.5708
scale = Vector2( 0.521332, 0.400002 )
enabled = true
exclude_parent = false
collision_mask = 2

[node name="RightHitBox" type="Area2D" parent="."]

[node name="Melee_Hitbox" type="CollisionShape2D" parent="RightHitBox"]
position = Vector2( 24.8352, -4.64767 )
shape = SubResource( 2 )
disabled = true
one_way_collision_margin = 0.0

[node name="LeftHitBox" type="Area2D" parent="."]

[node name="Melee_Hitbox2" type="CollisionShape2D" parent="LeftHitBox"]
position = Vector2( -16.7382, -4.59023 )
shape = SubResource( 2 )
disabled = true
one_way_collision_margin = 0.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="invinc_timer" type="Timer" parent="."]
one_shot = true

[node name="Regen_Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="PlayerFSM" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="RightHitBox" to="." method="_on_RightHitBox_body_entered"]
[connection signal="body_entered" from="LeftHitBox" to="." method="_on_LeftHitBox_body_entered"]
